--- a/src/pages/JavaScript/closure.mdx
+++ b/src/pages/JavaScript/closure.mdx
@@ -1,8 +1,8 @@
 # 閉包 (Closure)
 
-閉包 (closure) 是程式語言的一種特性，在 JavaScript 中也扮演相當重要的角色，被廣泛應用在 JavaScript 程式庫中。許多被開發者大量使用的重要功能，也都看得到閉包的身影，舉例來說最熱門的 JavaScript 函式庫 React 中的 useState 就是透過閉包來實作。
+閉包 (closure) 是程式語言的一種特性，在 JavaScript 中也扮演相當重要的角色，被廣泛應用在 JavaScript 程式庫中。許多被開發者大量使用的重要功能，也都看得到閉包的身影，舉例來說最熱門的 JavaScript 函式庫 React 中的 `useState` 就是透過閉包來實作。
 
-### 什麼是閉包?
+## 什麼是閉包?
 
 在 MDN 文件中，閉包被定義為函式以及該函式被宣告時所在的作用域環境 (lexical environment) 的組合。白話一點說，閉包就是內部函式能夠取得函式外部的變數，並且記住這個變數。因為能夠記住這個外部變數，閉包很常被用來做狀態保存。
 
@@ -29,4 +29,5 @@ inner(); // 3
 
 ## 參考資料
 
-[什麼是閉包 (Closure)？](https://www.explainthis.io/zh-hant/swe/what-is-closure)
+[什麼是閉包 (Closure)？](https://www.explainthis.io/zh-hant/swe/what-is-closure)\
+[Closure 閉包](https://eyesofkids.gitbooks.io/javascript-start-from-es6/content/part4/closure.html)
