--- a/src/pages/JavaScript/closure.mdx
+++ b/src/pages/JavaScript/closure.mdx
@@ -30,4 +30,5 @@ inner(); // 3
 ## 參考資料
 
 [什麼是閉包 (Closure)？](https://www.explainthis.io/zh-hant/swe/what-is-closure)\
-[Closure 閉包](https://eyesofkids.gitbooks.io/javascript-start-from-es6/content/part4/closure.html)
+[Closure 閉包](https://eyesofkids.gitbooks.io/javascript-start-from-es6/content/part4/closure.html)\
+[【前端基礎】JavaScript 中的閉包是什麼？React 閉包應用情境](https://vocus.cc/article/65bb95f8fd89780001ba5756)
