--- a/src/pages/git/git-command.mdx
+++ b/src/pages/git/git-command.mdx
@@ -10,14 +10,14 @@
 
 ## Update code
 
-- `git pull`
+- `git pull` (假如有另外在 github 上創了新的 commit)
 - `git add .`
 - `git commit -m "comment"`
 - `git push`
 
 ## Restore previous commit
 
-- `git log --oneline -n` // (n 是最近幾次的提交記錄）
+- `git log --oneline -n` // （n 是最近幾次的提交記錄）
 - `git reset --hard HEAD~`
   ```
   Sang-MacBook-Pro:test Sang$ git log --oneline -5 // 最近5次提交記錄
