--- a/src/pages/git/git-command.mdx
+++ b/src/pages/git/git-command.mdx
@@ -31,3 +31,9 @@
   如果想回復到 4f0f054 test2 ，輸入  `git reset --hard HEAD~2`\
   如果想回復到 6fefa2d test1 ，輸入  `git reset --hard HEAD~3`  如此類推。
 - `git push -f origin main` 強制以現在版本為主
+
+## Often
+
+- `git status`
+- `git config user.email` （有時 github commit 沒更新到 contributes 的時候檢查一下）
+- `git config --global user.mail "github@email"` （直接更新 global）
