--- a/src/pages/JavaScript/var&let&const.mdx
+++ b/src/pages/JavaScript/var&let&const.mdx
@@ -4,12 +4,12 @@
 
 他們之間主要有 4 個不同：
 
-1. **作用域(Scope)不同：** 在作用域上，`var` 可以是全域、也可以是以函式作為範圍；`let` 與 `const` 則是以區塊作為範圍。
-2. **重複宣告(Declaration)的差異：** 在宣告上，`var` 可以被重複宣告，但是 `let` 與`const` 則不行。`let` 與 `const` 在絕多數面向都是一樣，兩者的一大區別在於，用 `let` 宣告的變數可以重新賦值，但是用 `const` 的不行。
-3. **變量提升(Hoisting)不同：** 在提升上，`var` 宣告的變數會自動初始化值為 `undefined`，因此在宣告前就使用變數，不會出現錯誤，而會是 `undefined` ；但是 `let` 與 `const` 宣告的變數則不會自動初始化，而是會進到暫時死區 (TDZ)，因此在 `let` 與 `const` 宣告變數前使用該變數，會出現錯誤。
+1. **作用域 (Scope) 不同：** 在作用域上，`var` 可以是全域、也可以是以函式作為範圍；`let` 與 `const` 則是以區塊作為範圍。
+2. **重複宣告 (Declaration) 的差異：** 在宣告上，`var` 可以被重複宣告，但是 `let` 與`const` 則不行。`let` 與 `const` 在絕多數面向都是一樣，兩者的一大區別在於，用 `let` 宣告的變數可以重新賦值，但是用 `const` 的不行。
+3. **變量提升 (Hoisting) 不同：** 在提升上，`var` 宣告的變數會自動初始化值為 `undefined`，因此在宣告前就使用變數，不會出現錯誤，而會是 `undefined` ；但是 `let` 與 `const` 宣告的變數則不會自動初始化，而是會進到暫時死區 (TDZ)，因此在 `let` 與 `const` 宣告變數前使用該變數，會出現錯誤。
 4. **for 迴圈的綁定 (Bind) 差異：** `var` 在宣告變數前，不會綁定到 `for` 迴圈的上下文，而 `let` 和 `const` 會綁定到 `for` 迴圈的上下文。
 
-## 作用域(Scope)不同
+## 作用域 (Scope) 不同
 
 - `var` 是函式作用域，`let / const` 是區塊作用域。
 - `var` 具有「函式作用域」，亦即在函式中宣告的變數，有效作用範圍會被限制在該函式中。但不具有區塊作用域，所以在區塊中宣告的變數，依然會作用到區塊之外，並不會被區塊限制住。
@@ -83,7 +83,7 @@ callMegumi(); //Megumi
 
 而過往用 `var` 宣告，僅有 function 函式範圍有這樣的好處，而如今用 `let / const` 宣告，就能讓上述好處發生在 if、for 等「 區塊作用域 」當中，藉此降低多人協作或大型專案的衝突情況。
 
-## 重複宣告(Declaration)的差異
+## 重複宣告 (Declaration) 的差異
 
 - `var` 允許重複宣告，`let / const` 會出錯
 
@@ -104,7 +104,7 @@ console.log(studentName);
 //SyntaxError: Identifier 'studentName' has already been declared
 ```
 
-## 變量提升(Hoisting)不同
+## 變量提升 (Hoisting) 不同
 
 `undefined` 代表找不到值，已經被宣告，但尚未賦值。這邊結果為`undefined` ，即是代表：雖然我們看不見，但其實在 `console.log(i)` 之前，`i` 就已經被宣告了，只是尚未賦值。
 
@@ -209,5 +209,5 @@ for (const k = 0; k < 3; k++) {
 
 ## 參考資料
 
-[在 JavaScript 中用 var, let, 以及 const 有什麼差別？什麼時候該用哪個？](https://www.explainthis.io/zh-hant/swe/js-var-let-const-in-javascript)\
-[JS 宣告變數， var 與 let / const 差異](https://www.programfarmer.com/articles/2020/javascript-var-let-const-for-loop)
+[JS 宣告變數， var 與 let / const 差異](https://www.programfarmer.com/articles/2020/javascript-var-let-const-for-loop)\
+[在 JavaScript 中用 var, let, 以及 const 有什麼差別？什麼時候該用哪個？](https://www.explainthis.io/zh-hant/swe/js-var-let-const-in-javascript)
