--- a/src/pages/git/git-command.mdx
+++ b/src/pages/git/git-command.mdx
@@ -37,3 +37,7 @@
 - `git status`
 - `git config user.email` （有時 github commit 沒更新到 contributes 的時候檢查一下）
 - `git config --global user.mail "github@email"` （直接更新 global）
+
+
+## 參考資料
+[Git command](https://qiita.com/kozzy/items/b42ba59a8bac190a16ab)
