--- a/src/pages/JavaScript/ajax.mdx
+++ b/src/pages/JavaScript/ajax.mdx
@@ -16,4 +16,4 @@
 
 ## 參考資料
 
-[[book] 決戰！微前端架構（Micro Frontends in Action）](https://pjchender.dev/system-design-and-architecture/note-book-microfrontend-in-action/#%E4%BD%BF%E7%94%A8-ajax)
+- [[book] 決戰！微前端架構（Micro Frontends in Action）](https://pjchender.dev/system-design-and-architecture/note-book-microfrontend-in-action/#%E4%BD%BF%E7%94%A8-ajax)
