--- a/src/pages/JavaScript/var&let&const.mdx
+++ b/src/pages/JavaScript/var&let&const.mdx
@@ -209,5 +209,5 @@ for (const k = 0; k < 3; k++) {
 
 ## 參考資料
 
-[JS 宣告變數， var 與 let / const 差異](https://www.programfarmer.com/articles/2020/javascript-var-let-const-for-loop)\
-[在 JavaScript 中用 var, let, 以及 const 有什麼差別？什麼時候該用哪個？](https://www.explainthis.io/zh-hant/swe/js-var-let-const-in-javascript)
+- [JS 宣告變數， var 與 let / const 差異](https://www.programfarmer.com/articles/2020/javascript-var-let-const-for-loop)\
+- [在 JavaScript 中用 var, let, 以及 const 有什麼差別？什麼時候該用哪個？](https://www.explainthis.io/zh-hant/swe/js-var-let-const-in-javascript)
