--- a/src/pages/JavaScript/ajax.mdx
+++ b/src/pages/JavaScript/ajax.mdx
@@ -14,6 +14,6 @@
 
 ![async&sync](/async&sync.jpg)
 
-## 參考資料
+## References
 
 - [[book] 決戰！微前端架構（Micro Frontends in Action）](https://pjchender.dev/system-design-and-architecture/note-book-microfrontend-in-action/#%E4%BD%BF%E7%94%A8-ajax)
