--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -1,3 +1,12 @@
 # Sang's Notebook
 
 For record and review.
+
+---
+
+---
+
+**Commonly used links**
+
+- [Documentation Guide Syntax Highlighting](https://nextra.site/docs/guide/syntax-highlighting)
+- [Built-ins](https://nextra.site/docs/guide/built-ins)
