--- a/src/pages/Next.js/hydration.mdx
+++ b/src/pages/Next.js/hydration.mdx
@@ -1,3 +1,3 @@
-## 參考資料
+## References
 
 [Next.js: The Ultimate Cheat Sheet To Page Rendering](https://guydumais.digital/blog/next-js-the-ultimate-cheat-sheet-to-page-rendering/)
