--- a/src/pages/React/react.mdx
+++ b/src/pages/React/react.mdx
@@ -10,7 +10,7 @@ React （也稱為 React.js 或 ReactJS）是一個免費和開源的前端 Java
 
 1. **可重複使用元件**：React 將應用程式的 UI 分解為獨立的可重複使用元件，每個元件都有自己的邏輯，可以單獨編輯並在最終 UI 中組合使用，簡化了 UI 創建和管理任務，同時節省了開發時間。
 
-2. **虛擬 DOM**：React 利用虛擬 DOM 技術，使得在更新元件時無需重新渲染整個 DOM，而是只更新變化的部分，從而提高了網站的響應速度和效能。
+2. **虛擬 DOM**：React 利用虛擬 DOM（Virtual DOM） 技術，使得在更新元件時無需重新渲染整個 DOM，而是只更新變化的部分，從而提高了網站的響應速度和效能。
 
 3. **JSX 語法**：JSX 是 JavaScript 的語法擴展，允許在 JavaScript 程式碼中嵌入類似 HTML 的程式碼，React 將 JSX 轉換為 DOM 元素，使得編寫 UI 更加直覺和方便。
 
