--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -8,5 +8,6 @@ For record and review.
 
 **Commonly used links**
 
+- [Markdown](https://nextra.site/docs/guide/markdown)
 - [Documentation Guide Syntax Highlighting](https://nextra.site/docs/guide/syntax-highlighting)
 - [Built-ins](https://nextra.site/docs/guide/built-ins)
