--- a/src/pages/API/RESTfulAPI.mdx
+++ b/src/pages/API/RESTfulAPI.mdx
@@ -47,3 +47,5 @@ HTTP 標頭：Client 與 Server 之間的中繼資料，當中包含所需參數
 ## References
 
 - [什麼是 RESTful API？](https://www.explainthis.io/zh-hant/swe/restful-api#api)
+- [REST API についてちゃんと理解する](https://qiita.com/na_/items/84505c00c1540d317b35)
+- [API 設計まとめ](https://qiita.com/KNR109/items/d3b6aa8803c62238d990)
