--- a/src/pages/z/qdb.mdx
+++ b/src/pages/z/qdb.mdx
@@ -1,8 +1,197 @@
+## HTML
+
 <details>
   <summary>
-    <i>Wow, so fancy</i>
+    <b>HTML</b>
   </summary>
-  <b>WOW, SO BOLD</b>
+  
+1. **HTML 是什麼？**
+
+- HTML（HyperText Markup Language）是一種標記語言，用於描述網頁的結構和內容。
+
+2. **HTML5 有哪些新特性？**
+
+- HTML5 引入了許多新的特性，包括語意化標籤（如 `<header>`、`<footer>`）、視頻和音頻支持、Canvas 和 SVG 繪圖、本地存儲等。
+
+3. **請解釋 HTML 語義化標籤的意義。**
+
+- 語義化標籤有助於描述網頁結構和內容的含義，提高了網頁的可讀性和可訪問性，並且有助於搜索引擎優化（SEO）。
+
+4. **列出五個 HTML 語義化標籤的示例。**
+
+- `<header>`, `<footer>`, `<nav>`, `<article>`, `<section>`
+
+5. **什麼是 HTML 元素？**
+
+- HTML 元素是構成 HTML 文檔的基本組成單元，由標籤、屬性和內容組成。
+
+6. **請解釋 HTML 標籤和屬性的關係。**
+
+- HTML 標籤用於定義元素，而屬性則用於提供有關元素的附加信息或配置。
+
+7. **解釋 HTML 和 XHTML 之間的區別。**
+
+- XHTML 是 HTML 的一種基於 XML 的版本，更嚴格地遵循 XML 的規則，例如要求所有標籤都必須被正確地嵌套和閉合。
+
+8. **什麼是 HTML 注釋？**
+
+- HTML 注釋是用於在 HTML 代碼中添加說明或註釋的方式，不會在網頁中顯示。
+
+9. **解釋 HTML 的 DOCTYPE 是什麼？**
+
+- DOCTYPE 是一個特殊的標記，用於聲明 HTML 文檔使用的 HTML 或 XHTML 版本，以幫助瀏覽器正確地解析文檔。
+
+10. **如何在 HTML 中添加超連結？**
+
+- 使用 `<a>` 標籤，並在 href 屬性中指定目標 URL，例如：`<a href="https://example.com">Link</a>`。
+
+</details>
+
+## CSS
+
+<details>
+  <summary>
+    <b>CSS</b>
+  </summary>
+
+1. **CSS 是什麼？**
+
+- CSS（Cascading Style Sheets）是一種樣式表語言，用於描述網頁的外觀和排版。
+
+2. **什麼是 CSS 選擇器？**
+
+- CSS 選擇器用於選擇要應用樣式的 HTML 元素，例如標籤名、類名、ID 等。
+
+3. **列出五個 CSS 屬性。**
+
+- `color`, `font-size`, `margin`, `padding`, `background-color`
+
+4. **什麼是 CSS 盒模型？**
+
+- CSS 盒模型描述了 HTML 元素的盒子模型，包括內容、內邊距、邊框和外邊距。
+
+5. **解釋 CSS 的浮動（float）屬性。**
+
+- `float` 屬性用於將元素移動到其父元素的左側或右側，並允許其他元素繼續填充周圍。
+
+6. **什麼是 CSS 優先級？**
+
+- CSS 優先級是指當多個樣式應用於同一個元素時，用於確定最終應用哪個樣式的規則。
+
+7. **請解釋 CSS 中的 `position` 屬性。**
+
+- `position` 屬性用於指定元素的定位方式，如相對定位、絕對定位、固定定位等。
+
+8. **什麼是 CSS 媒體查詢（media queries）？**
+
+- CSS 媒體查詢是一種允許根據不同的媒體類型和屬性，以及瀏覽器視口大小和設備特性，應用不同樣式的技術。
+
+9. **如何在 CSS 中實現水平居中和垂直居中？**
+
+- 水平居中：`margin: 0 auto;`，垂直居中：使用 `position: absolute;` 和 `transform: translate(-50%, -50%);`
+
+10. **解釋 CSS 中的 `box-sizing` 屬性。**
+
+- `box-sizing` 屬性用於指定元素的框模型計算方式，可以是 `content-box`（默認值）或 `border-box`，後者會包括內邊距和邊框在內計算寬度和高度。
+
+</details>
+
+## JavaScript
+
+<details>
+  <summary>
+    <b>JavaScript</b>
+  </summary>
+
+1. **JavaScript 是什麼？**
+
+- JavaScript 是一種用於網頁客戶端腳本編程的高級語言，用於為網頁添加交互性和動態效果。
+
+2. **什麼是變量（variable）？**
+
+- 變量是用於存儲數據值的容器，在程式中可以被重複使用。
+
+3. **列出五個 JavaScript 數據類型。**
+
+- `number`, `string`, `boolean`, `object`, `array`
+
+4. **什麼是函數（function）？**
+
+- 函數是一段可重複使用的程式碼塊，可以接受輸入並返回輸出。
+
+5. **解釋 JavaScript 中的事件委託（event delegation）。**
+
+- 事件委託是一種技術，利用事件冒泡的特性將事件處理程序綁定到父元素而不是每個子元素上，提高性能並簡化程式碼。
+
+6. **什麼是閉包（closure）？**
+
+- 閉包是指函數與其詞法環境的結合，可以在函數內部訪問外部變數，即使在該變數已經離開作用域時也可以。
+
+7. **解釋 JavaScript 中的原型繼承（prototype inheritance）。**
+
+- 原型繼承是 JavaScript 中的一種對象繼承機制，通過對象原型鏈的連接來實現對象之間的屬性和方法共享。
+
+8. **什麼是 AJAX？**
+
+- AJAX（Asynchronous JavaScript and XML）是一種在不重新加載整個網頁的情況下，通過在後台與伺服器進行少量數據交換來更新部分網頁的技術。
+
+9. **解釋 JavaScript 中的箭頭函數（arrow functions）。**
+
+- 箭頭函數是 ES6 引入的一種新的函數定義方式，具有簡潔的語法和綁定的 `this` 上下文。
+
+10. **什麼是 JavaScript 的事件循環（event loop）？**
+
+- JavaScript 的事件循環是一個處理和分發事件的機制，用於實現非阻塞的異步編程，保證程式的運行效率和流暢性。
+
+</details>
+
+## React
+
+<details>
+  <summary>
+    <b>React</b>
+  </summary>
+
+1. **React 是什麼？**
+
+- React 是一個用於構建用戶界面的 JavaScript 庫，由 Facebook 開發，具有組件化和虛擬 DOM 的特性。
+
+2. **什麼是 JSX？**
+
+- JSX（JavaScript XML）是一種允許在 JavaScript 中編寫類似 HTML 的語法的擴展，用於定義 React 元素的結構和內容。
+
+3. **解釋 React 中的組件（component）。**
+
+- React 組件是可重複使用的獨立模塊，封裝了特定的功能和 UI，可以根據需要組合和嵌套。
+
+4. **什麼是 props？**
+
+- `props` 是 React 中組件間通信的一種方式，用於將數據從父組件傳遞到子組件。
+
+5. **解釋 React 中的狀態（state）。**
+
+- `state` 是 React 組件內部管理的一種數據，可以隨時間變化而更新，並觸發重新渲染。
+
+6. **React 中的生命週期方法有哪些？**
+
+- `componentDidMount`, `componentDidUpdate`, `componentWillUnmount` 等。
+
+7. **什麼是 React Router？**
+
+- React Router 是一個用於在 React 應用中實現路由的庫，用於管理 URL 和組件之間的映射關係。
+
+8. **解釋 React 中的 context。**
+
+- `context` 是 React 中一種用於跨組件層級傳遞數據的機制，可以避免 props 層層傳遞的問題。
+
+9. **什麼是 React Hooks？**
+
+- React Hooks 是 React 16.8 引入的一種新特性，用於在函數組件中使用狀態和其他 React 特性。
+
+10. **什麼是 React 的虛擬 DOM（Virtual DOM）？**
+
+- 虛擬 DOM 是 React 使用的一種內部表示，用於提高渲染性能，它是一個輕量級的 JavaScript 物件樹，用於描述真實 DOM 的結構和屬性，並進行比對和更新。
+
 </details>
 
 ## References
