--- a/src/pages/React/Hooks/useState.mdx
+++ b/src/pages/React/Hooks/useState.mdx
@@ -1,3 +1,14 @@
 ## useState
 
+useState は、関数コンポーネントの state を保持したり、更新したりするためのフックです。
+state とは、フォームに入力されたデータなど、アプリケーションが保持している状態のことです。useState は次のような形で記述されます。
+
+const [state の変数, state を更新する関数] = useState(state の初期値)
+
+useState が必要となる場面は、インタラクティブにやり取りされる値を管理したい時です。典型的な例として、入力フォームを実装する場合が挙げられます。
+
 React 中提到「狀態(state)」，基本上可以把它理解為「資料(data)」。
+
+### References
+
+- [【初心者向け】 React Hooks とは?その特徴・使い方・注意点について解説！](https://udemy.benesse.co.jp/development/react-hooks.html)
