--- a/src/pages/Testing/unit-testing.mdx
+++ b/src/pages/Testing/unit-testing.mdx
@@ -1,3 +1,10 @@
+## Unit Testing
+
+寫測試的目的就是要確保程式碼品質，因為(1)自己開發新功能可能會弄壞以前寫的 code 或 (2)團隊協作動到彼此的 code，跑個 Unit test 馬上就知道！這可以降低日後的維護成本；對於會 TDD (Test-Driven Development)的工程師來說，甚至是加快開發速度。
+
+程式碼品質
+程式碼的品質最主要的就是：準確(Correctness)、高效(Performance)、易讀性(Readability)跟架構(Structure)。測試主要處理的就是準確跟高效。
+
 ## References
 
 - [Unit Test 教學：核心觀念](https://medium.com/@ji3g4kami/unit-test-%E6%95%99%E5%AD%B8-ba39e54fcbc5)
