--- a/src/pages/git/git-command.mdx
+++ b/src/pages/git/git-command.mdx
@@ -15,6 +15,13 @@
 - `git commit -m "comment"`
 - `git push`
 
+## Update 久未更新的 repo
+
+- `git pull origin master`
+- `git add .`
+- `git commit -m "comment"`
+- `git push --set-upstream origin master`
+
 ## Restore previous commit
 
 - `git log --oneline -n` // （n 是最近幾次的提交記錄）
