--- a/src/pages/JavaScript/closure.mdx
+++ b/src/pages/JavaScript/closure.mdx
@@ -1,6 +1,6 @@
 # 閉包 (Closure)
 
-閉包 (closure) 是程式語言的一種特性，在 JavaScript 中也扮演相當重要的角色，被廣泛應用在 JavaScript 程式庫中。許多被開發者大量使用的重要功能，也都看得到閉包的身影，舉例來說最熱門的 JavaScript 函式庫 React 中的 `useState` 就是透過閉包來實作。
+JavaScript 的閉包（closure）是指在函數內部創建的函數，它可以訪問其外部函數作用域中的變量。閉包的特性之一是它可以捕獲並維持其創建時的作用域鏈。 React 中的 `useState` 就是透過閉包來實作。
 
 ## 什麼是閉包?
 
@@ -135,6 +135,20 @@ for (let i = 0; i < 100000000; i++) {
   addNumbers(i);
 }
 ```
+
+## 垃圾回收機制 (Garbage Collection)
+
+關於 JavaScript 閉包的垃圾回收（garbage collection）特性，可以從以下幾個方面來說明：
+
+1. **變量引用的維持**：閉包中引用的外部變量會使得這些變量的作用域鏈被保留在內存中，即使外部函數執行完畢，這些變量也不會被釋放。
+
+2. **內存洩漏風險**：如果閉包中引用的外部變量是一個較大的對象或者數組，並且這個閉包長時間存在，那麼這個對象或數組也會被保留在內存中，可能導致內存洩漏問題。
+
+3. **引用計數算法**：JavaScript 的垃圾回收器通常使用引用計數算法來判斷對象是否可以被回收。在閉包中，如果存在循環引用（例如一個對象引用了閉包中的函數，而閉包中的函數又引用了這個對象），那麼這些對象將無法被正常回收，即使它們已經不再被程式所使用。
+
+4. **手動解除引用**：為了避免閉包導致的內存洩漏問題，開發者可以通過手動解除對閉包的引用來釋放相關的內存，例如將閉包賦值為 null。這樣一來，閉包中引用的外部變量及其作用域鏈就會被釋放，相應的內存也會被回收。
+
+結論，閉包在 JavaScript 中是一種強大的特性，但在使用時需要注意內存管理，特別是在涉及到長時間存在的閉包時，要注意避免因閉包而導致的內存洩漏問題。
 
 ## References
 
