--- a/src/pages/JavaScript/async&await.mdx
+++ b/src/pages/JavaScript/async&await.mdx
@@ -1,3 +1,4 @@
 ## References
 
 - [JavaScript Promise の本](https://azu.github.io/promises-book/)
+- [Promise を活用する](https://jsprimer.net/use-case/ajaxapp/promise/)
