--- a/src/pages/git/git-command.mdx
+++ b/src/pages/git/git-command.mdx
@@ -15,6 +15,12 @@
 - `git commit -m "comment"`
 - `git push`
 
+## Git Branch
+
+## Resolve conflict
+
+![git-merge&rebase](/git-merge&rebase.jpeg)
+
 ## Update 久未更新的 repo
 
 - `git pull origin master`
@@ -47,4 +53,6 @@
 
 ## References
 
-[Git command](https://qiita.com/kozzy/items/b42ba59a8bac190a16ab)
+- [Git command](https://qiita.com/kozzy/items/b42ba59a8bac190a16ab)
+- [Git Branch](https://www.atlassian.com/git/tutorials/using-branches)
+- [How to Resolve Merge Conflicts in Git?](https://www.simplilearn.com/tutorials/git-tutorial/merge-conflicts-in-git)
