--- a/src/pages/JavaScript/array&object.mdx
+++ b/src/pages/JavaScript/array&object.mdx
@@ -1,28 +1,257 @@
 # Array & Object 取用資料的 methods
 
-## Array methods
+## Array Methods
 
-1. **index**：通過陣列的 index 來訪問其中的元素，例如 `myArray[0]`。
-2. **forEach** ：使用 forEach 對陣列中的每個元素進行迭代處理。
-3. **map** ：使用 map 對陣列中的每個元素進行處理並返回一個新陣列。
-4. **filter** ：使用 filter 根據指定的條件篩選陣列中的元素。
-5. **find** ：使用 find 根據指定的條件查找陣列中的第一個符合條件的元素。
-6. **reduce** ：使用 reduce 對陣列中的所有元素進行累積計算。
-7. **slice** ：使用 slice 從陣列中提取出指定範圍的元素，並返回一個新陣列。
-8. **splice** ：使用 splice 向陣列中添加或刪除元素。
-9. **concat** ：使用 concat 將兩個陣列合併成一個新陣列。
+### Basic
+
+<details>
+  <summary>
+    <b>Array length：</b>獲取陣列長度。
+  </summary>
+
+```js
+const fruits = ["Banana", "Orange", "Apple", "Mango"];
+let size = fruits.length;
+console.log(size); // 4
+```
+
+</details>
+
+<details>
+  <summary><b>Array toString()：</b>將陣列轉換為字串。</summary>
+
+```js
+const array1 = [1, 2, "a", "1a"];
+
+console.log(array1.toString());
+// Expected output: "1,2,a,1a"
+```
+
+</details>
+
+<details>
+  <summary><b>Array join()：</b>與 toString() 類似，但還可以指定分隔符號。</summary>
+
+```js
+const elements = ["Fire", "Air", "Water"];
+
+console.log(elements.join());
+// Expected output: "Fire,Air,Water"
+
+console.log(elements.join(""));
+// Expected output: "FireAirWater"
+
+console.log(elements.join("-"));
+// Expected output: "Fire-Air-Water"
+```
+
+</details>
+
+<details>
+  <summary><b>Array slice()：</b>使用 slice(begin, end) 從陣列中提取出指定範圍的元素，並返回一個新陣列。</summary>
+
+```js
+const animals = ["ant", "bison", "camel", "duck", "elephant"];
+
+console.log(animals.slice(2));
+// Expected output: Array ["camel", "duck", "elephant"]
+
+console.log(animals.slice(2, 4));
+// Expected output: Array ["camel", "duck"]
+
+console.log(animals.slice(1, 5));
+// Expected output: Array ["bison", "camel", "duck", "elephant"]
+
+console.log(animals.slice(-2));
+// Expected output: Array ["duck", "elephant"]
+
+console.log(animals.slice(2, -1));
+// Expected output: Array ["camel", "duck"]
+
+console.log(animals.slice());
+// Expected output: Array ["ant", "bison", "camel", "duck", "elephant"]
+```
+
+</details>
+
+<details>
+  <summary><b>Array splice()：</b>使用 splice(begin, deleteCount, addItem) 向陣列中添加或刪除元素。</summary>
+
+begin : 起始 index 若為-1 則代表從倒數第一個開始算
+deleteCount : 要刪除的個數
+addItem: 要添加的元素
+
+```js
+const months = ["Jan", "March", "April", "June"];
+months.splice(1, 0, "Feb");
+// Inserts at index 1
+console.log(months);
+// Expected output: Array ["Jan", "Feb", "March", "April", "June"]
+
+months.splice(4, 1, "May");
+// Replaces 1 element at index 4
+console.log(months);
+// Expected output: Array ["Jan", "Feb", "March", "April", "May"]
+```
+
+</details>
+
+<details>
+  <summary><b>Array concat()：</b>使用 concat 將兩個陣列合併成一個新陣列。</summary>
+
+```js
+const num1 = [1, 2, 3];
+const num2 = [4, 5, 6];
+const num3 = [7, 8, 9];
+
+const numbers = num1.concat(num2, num3);
+
+console.log(numbers);
+// results in [1, 2, 3, 4, 5, 6, 7, 8, 9]
+```
+
+</details>
+
+### Search
+
+<details>
+  <summary><b>Array find()：</b>使用 find 根據指定的條件查找陣列中的第一個符合條件的元素。</summary>
+
+```js
+const inventory = [
+  { name: "apples", quantity: 2 },
+  { name: "bananas", quantity: 0 },
+  { name: "cherries", quantity: 5 },
+];
+
+function isCherries(fruit) {
+  return fruit.name === "cherries";
+}
+
+console.log(inventory.find(isCherries));
+// { name: 'cherries', quantity: 5 }
+```
+
+</details>
+
+<details>
+  <summary><b>Array includes()：</b></summary>
+
+```js
+const array1 = [1, 2, 3];
+
+console.log(array1.includes(2));
+// Expected output: true
+
+const pets = ["cat", "dog", "bat"];
+
+console.log(pets.includes("cat"));
+// Expected output: true
+
+console.log(pets.includes("at"));
+// Expected output: false
+```
+
+</details>
+
+### Iteration
+
+<details>
+  <summary><b>Array forEach()：</b>使用 forEach 對陣列中的每個元素進行迭代處理。</summary>
+
+```js
+const array1 = ["a", "b", "c"];
+
+array1.forEach((element) => console.log(element));
+
+// Expected output: "a"
+// Expected output: "b"
+// Expected output: "c"
+```
+
+</details>
+
+<details>
+  <summary><b>Array map()：</b>使用 map 對陣列中的每個元素進行處理並返回一個新陣列。</summary>
+
+```js
+const array1 = [1, 4, 9, 16];
+
+// Pass a function to map
+const map1 = array1.map((x) => x * 2);
+
+console.log(map1);
+// Expected output: Array [2, 8, 18, 32]
+```
+
+```js
+const kvArray = [
+  { key: 1, value: 10 },
+  { key: 2, value: 20 },
+  { key: 3, value: 30 },
+];
+
+const reformattedArray = kvArray.map(({ key, value }) => ({ [key]: value }));
+
+console.log(reformattedArray); // [{ 1: 10 }, { 2: 20 }, { 3: 30 }]
+console.log(kvArray);
+// [
+//   { key: 1, value: 10 },
+//   { key: 2, value: 20 },
+//   { key: 3, value: 30 }
+// ]
+```
+
+</details>
+<details>
+  <summary><b>Array filter()：</b>使用 filter 根據指定的條件篩選陣列中的元素。</summary>
+
+```js
+const array = [-3, -2, -1, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13];
+
+function isPrime(num) {
+  for (let i = 2; num > i; i++) {
+    if (num % i === 0) {
+      return false;
+    }
+  }
+  return num > 1;
+}
+
+console.log(array.filter(isPrime)); // [2, 3, 5, 7, 11, 13]
+```
+
+</details>
+<details>
+  <summary><b>Array reduce()：</b>使用 reduce 對陣列中的所有元素進行累積計算。</summary>
+
+```js
+const array1 = [1, 2, 3, 4];
+
+// 0 + 1 + 2 + 3 + 4
+const initialValue = 0;
+const sumWithInitial = array1.reduce(
+  (accumulator, currentValue) => accumulator + currentValue,
+  initialValue
+);
+
+console.log(sumWithInitial);
+// Expected output: 10
+```
+
+</details>
 
 ## Object methods
 
-1. **點號訪問**：使用點號（`.`）來訪問物件的屬性，例如 `myObject.propertyName`。
-2. **方括號訪問**：使用方括號（`[]`）和屬性名來訪問物件的屬性，例如 `myObject['propertyName']`。
-3. **for...in 迴圈**：使用 for...in 迴圈遍歷物件的屬性，並訪問每個屬性的值。
-4. **Object.keys** ：使用 Object.keys 獲取物件的所有屬性名，並返回一個陣列。
-5. **Object.values** ：使用 Object.values 獲取物件的所有屬性值，並返回一個陣列。
-6. **Object.entries** ：使用 Object.entries 獲取物件的所有屬性及其對應的值，並返回一個二維陣列。
-7. **Object.getOwnPropertyNames** ：使用 Object.getOwnPropertyNames 獲取物件的所有屬性名，並返回一個陣列，包括不可枚舉的屬性名。
+1. 點號訪問：使用點號（`.`）來訪問物件的屬性，例如 `myObject.propertyName`。
+2. 方括號訪問：使用方括號（`[]`）和屬性名來訪問物件的屬性，例如 `myObject['propertyName']`。
+3. for...in 迴圈：使用 for...in 迴圈遍歷物件的屬性，並訪問每個屬性的值。
+4. Object.keys ：使用 Object.keys 獲取物件的所有屬性名，並返回一個陣列。
+5. Object.values ：使用 Object.values 獲取物件的所有屬性值，並返回一個陣列。
+6. Object.entries ：使用 Object.entries 獲取物件的所有屬性及其對應的值，並返回一個二維陣列。
+7. Object.getOwnPropertyNames ：使用 Object.getOwnPropertyNames 獲取物件的所有屬性名，並返回一個陣列，包括不可枚舉的屬性名。
 
-### References
+## References
 
 - [JavaScript Array Methods](https://www.w3schools.com/js/js_array_methods.asp)
 - [Array](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array)
