--- a/src/pages/JavaScript/closure.mdx
+++ b/src/pages/JavaScript/closure.mdx
@@ -2,6 +2,14 @@
 
 JavaScript 的閉包（closure）是指在函數內部創建的函數，它可以訪問其外部函數作用域中的變量。閉包的特性之一是它可以捕獲並維持其創建時的作用域鏈。 React 中的 `useState` 就是透過閉包來實作。
 
+<details>
+  <summary><b></b>
+  </summary>
+
+when you have a function defined inside of another function, that inner function has access to the variables and scope of the outer function even if the outer function finishes executing and those variables are no longer accessible outside of that function.
+
+</details>
+
 ## 什麼是閉包?
 
 在 MDN 文件中，閉包被定義為函式及其宣告時所在的作用域環境的組合。簡單來說，閉包就是內部函式能夠存取外部函式的變數並記住它。閉包常被用來實現<u>**狀態保存**</u>。
